CREATE TABLE BOM (ProductProduct_ID varchar2(255) NOT NULL, ProductType_ProductDesignation varchar2(255) NOT NULL, ProductProduct_FamilyFamily_ID varchar2(255) NOT NULL, PRIMARY KEY (ProductProduct_ID));
CREATE TABLE BOO (Production_OrderProductProduct_ID varchar2(255) NOT NULL, Production_OrderProductType_ProductDesignation varchar2(255) NOT NULL, Production_OrderProductProduct_FamilyFamily_ID varchar2(255) NOT NULL, Production_OrderOrderOrder_ID varchar2(255) NOT NULL, PRIMARY KEY (Production_OrderProductProduct_ID));
CREATE TABLE Component (Component_ID varchar2(255) NOT NULL, Name varchar2(255) NOT NULL, Quantity number(10) NOT NULL, BOMProductProduct_ID varchar2(255) NOT NULL, PRIMARY KEY (Component_ID));
CREATE TABLE Costumer (NIF number(9) GENERATED AS IDENTITY, Name varchar2(255) NOT NULL, Address varchar2(255) NOT NULL, Contact number(9) NOT NULL, PRIMARY KEY (NIF));
CREATE TABLE Operation (BOOProduction_OrderProductProduct_ID varchar2(255) NOT NULL, Type_OperationDesignation varchar2(255) NOT NULL, PRIMARY KEY (Type_OperationDesignation));
CREATE TABLE "Order" (Order_ID varchar2(255) NOT NULL, OrderDate date NOT NULL, DeliveryDate date NOT NULL, CostumerNIF number(9) NOT NULL, PRIMARY KEY (Order_ID));
CREATE TABLE Product (Product_ID varchar2(255) NOT NULL, Name varchar2(255) NOT NULL, Type_ProductDesignation varchar2(255) NOT NULL, Product_FamilyFamily_ID varchar2(255) NOT NULL, PRIMARY KEY (Product_ID, Type_ProductDesignation, Product_FamilyFamily_ID));
CREATE TABLE Product_Family (Family_ID varchar2(255) NOT NULL, PRIMARY KEY (Family_ID));
CREATE TABLE Production_Order (quantity number(10) NOT NULL, ProductProduct_ID varchar2(255) NOT NULL, ProductType_ProductDesignation varchar2(255) NOT NULL, ProductProduct_FamilyFamily_ID varchar2(255) NOT NULL, OrderOrder_ID varchar2(255) NOT NULL, PRIMARY KEY (ProductProduct_ID, ProductType_ProductDesignation, ProductProduct_FamilyFamily_ID, OrderOrder_ID));
CREATE TABLE Raw_Materials (Name varchar2(255) NOT NULL, Quantity number(10) NOT NULL, BOMProductProduct_ID varchar2(255) NOT NULL, PRIMARY KEY (Name));
CREATE TABLE Type_Operation (Designation varchar2(255) NOT NULL, PRIMARY KEY (Designation));
CREATE TABLE Type_Product (Designation varchar2(255) NOT NULL, PRIMARY KEY (Designation));
CREATE TABLE Type_Workstation (Designation varchar2(255) NOT NULL, PRIMARY KEY (Designation));
CREATE TABLE Workstation (Workstation_ID varchar2(255) NOT NULL, ExecutionTime number(10) NOT NULL, OperationType_OperationDesignation varchar2(255) NOT NULL, Type_WorkstationDesignation varchar2(255) NOT NULL, PRIMARY KEY (Workstation_ID, Type_WorkstationDesignation));
ALTER TABLE Product ADD CONSTRAINT FKProduct68593 FOREIGN KEY (Type_ProductDesignation) REFERENCES Type_Product (Designation);
ALTER TABLE Product ADD CONSTRAINT FKProduct42868 FOREIGN KEY (Product_FamilyFamily_ID) REFERENCES Product_Family (Family_ID);
ALTER TABLE Production_Order ADD CONSTRAINT FKProduction146834 FOREIGN KEY (ProductProduct_ID, ProductType_ProductDesignation, ProductProduct_FamilyFamily_ID) REFERENCES Product (Product_ID, Type_ProductDesignation, Product_FamilyFamily_ID);
ALTER TABLE Production_Order ADD CONSTRAINT FKProduction620872 FOREIGN KEY (OrderOrder_ID) REFERENCES "Order" (Order_ID);
ALTER TABLE "Order" ADD CONSTRAINT FKOrder401762 FOREIGN KEY (CostumerNIF) REFERENCES Costumer (NIF);
ALTER TABLE BOO ADD CONSTRAINT FKBOO662986 FOREIGN KEY (Production_OrderProductProduct_ID, Production_OrderProductType_ProductDesignation, Production_OrderProductProduct_FamilyFamily_ID, Production_OrderOrderOrder_ID) REFERENCES Production_Order (ProductProduct_ID, ProductType_ProductDesignation, ProductProduct_FamilyFamily_ID, OrderOrder_ID);
ALTER TABLE Operation ADD CONSTRAINT FKOperation333913 FOREIGN KEY (BOOProduction_OrderProductProduct_ID) REFERENCES BOO (Production_OrderProductProduct_ID);
ALTER TABLE Operation ADD CONSTRAINT FKOperation94797 FOREIGN KEY (Type_OperationDesignation) REFERENCES Type_Operation (Designation);
ALTER TABLE Workstation ADD CONSTRAINT FKWorkstatio869019 FOREIGN KEY (OperationType_OperationDesignation) REFERENCES Operation (Type_OperationDesignation);
ALTER TABLE Workstation ADD CONSTRAINT FKWorkstatio354071 FOREIGN KEY (Type_WorkstationDesignation) REFERENCES Type_Workstation (Designation);
ALTER TABLE Raw_Materials ADD CONSTRAINT FKRaw_Materi687646 FOREIGN KEY (BOMProductProduct_ID) REFERENCES BOM (ProductProduct_ID);
ALTER TABLE BOM ADD CONSTRAINT FKBOM143089 FOREIGN KEY (ProductProduct_ID, ProductType_ProductDesignation, ProductProduct_FamilyFamily_ID) REFERENCES Product (Product_ID, Type_ProductDesignation, Product_FamilyFamily_ID);
ALTER TABLE Component ADD CONSTRAINT FKComponent472699 FOREIGN KEY (BOMProductProduct_ID) REFERENCES BOM (ProductProduct_ID);
