@startuml
skinparam classBackgroundColor #ADD8E6
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods
left to right direction

title Project Domain Model

class ProductionLine{

}
class Administrator{

}
class SystemUsers{
    mail
    password
    name
    NIF
    adress
    phoneNumber
}
class PlantFloorManager{

}
class ProductManager{

}

class RawMaterial {
    name
    description
    stock
}

class Product {
    name
    stock
    manufacturingDate
}

class Component {
    name
    description
    stock
}

class Machine {
    id
    executionTime
}

class Employee {
    name
    NIF
    address
    phoneNumber
    birthdate
}

class Operation {
    name
    executionTime
    status
    type
}

class Workstation {
    name
    capacity
    status
    type
}

class Factory {
    name
    specialty
    address
}

class Order {
    orderDate
    deliveryDate
    adress
}

class Client {
    name
    type
    NIF
    address
    phoneNumber
}

class Variant{
    color
    size

}

class BOM{
    quantity

}

Administrator"1..*" -- "1..*" SystemUsers: is a >
ProductManager"1..*" -- "1..*" SystemUsers: is a >
PlantFloorManager"1..*" -- "1..*" SystemUsers: is a >
Administrator"1..*" -- "1..*" SystemUsers: manages >
PlantFloorManager"1..*" -- "1..*" ProductionLine: specifies >
ProductionLine "1" -- "1..*" Machine: has >
ProductManager "1..*" -- "1..*" Product: controls >
Component "1..*" -- "1..*" RawMaterial: is made of >
Product "1..*" -- "1..*" Component : is made of >

' assumindo que temos de colocar a Bill Of Materials
BOM "1" -- "1..*" RawMaterial : has <
BOM "1" -- "1..*" Product : has <
BOM "1" -- "1..*" Component : has <
Operation "1" -- "1..*" Product : creates >
Operation "1" -- "1" BOM : has >
Order "1" -- "1..*" Operation : forwards >

'assumindo que não existem encomendas iguais
Client "1" -- "1..*" Order : places >
Machine "1..*" -- "1" Operation : processes >
Employee "0..*" -- "1..*" Machine : is operated by <
Workstation "1" -- "1..*" ProductionLine : has >
Factory "1" -- "1..*" Workstation : has >
Product "1..*"-- "1..*" Variant : has >
Order "1" -- "1..*" Product : has >

@enduml